--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,11 @@
 body{
     background-color: #000000;
 opacity: 0.8;
-background-image:  radial-gradient(#f2f606 0.5px, transparent 0.5px), radial-gradient(#f2f606 0.5px, #000000 0.5px);
-background-size: 20px 20px;
-background-position: 0 0,10px 10px;
+
+}
+.content{
+    height:auto;
+    width:100%;
 }
 
 #container{
@@ -17,7 +19,7 @@ background-position: 0 0,10px 10px;
     padding-top: 50;
     align-items: center;
     justify-content:center;
-    font-family: dutch;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     box-shadow: #f2f606;
 }
 
